# certutil-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: ida-api-map.md
reversing/: README.md
src/: cli.rs  lib.rs  main.rs
src/win/: cert_extensions.rs  cert_hash.rs  cert_urls.rs  codec.rs  dump.rs  encoding.rs  hashfile.rs  mod.rs  names.rs  ocsp_der.rs  store_view.rs  tls_fetch.rs  tls_names.rs  url.rs  verify.rs  verify_format.rs
tests/: devolutions_https.rs  parity_certutil_verify.rs
tests/fixtures/: README.md  test_leaf.der
