[package]
name = "certutil_rs"
version = "0.1.0"
edition = "2021"
description = "Read-only certutil-style diagnostics for Windows (Rust + Win32 CryptoAPI)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[dev-dependencies]
native-tls = "0.2"
