[package]
name = "certutil_rs"
version = "0.1.0"
edition = "2021"
description = "Read-only certutil-style diagnostics for Windows (Rust + Win32 CryptoAPI)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
native-tls = "0.2"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Time",
] }

[dev-dependencies]
