[package]
name = "certutil_rs"
version = "0.1.0"
edition = "2021"
description = "Read-only certutil-style diagnostics for Windows (Rust + Win32 CryptoAPI)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
schannel = "0.1.29"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Networking_WinHttp",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Time",
] }
der-parser = "9"
sha1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
